# data-dev-pipes

./: Dockerfile  README.md  etl_pipeline.ipynb  etl_pipeline.py  ingest_data.py  ingestpipe.ipynb  main.py  pipeline.py  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
data/: raw_csv_sales.csv  sales_summary.csv
