[project]
name = "dev-data-pipes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=3.0.1",
    "psycopg2>=2.9.11",
    "pyarrow>=23.0.1",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "pgcli>=4.4.0",
]
